# dive

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: config.rs  mod.rs  search.rs
