[package]
name = "dive"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffaanngg/dive"
homepage = "https://github.com/ffaanngg/dive"
description = "🔎 Search millions of files at lightning-fast speeds to find what you are looking for!"

exclude = ["assets/*"]
[dependencies]
jwalk = "0.6.0"
colored = "2"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
